--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@refinedev/kbar": "^2.0.0",
     "@refinedev/react-router": "^2.0.0",
     "@refinedev/simple-rest": "^6.0.0",
+    "i18next": "^25.6.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.66.1",
+    "react-i18next": "^16.3.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.0.2",
     "zod": "^4.1.13"
