--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
     "@refinedev/kbar": "^2.0.0",
     "@refinedev/react-router": "^2.0.0",
     "@refinedev/simple-rest": "^6.0.0",
+    "axios": "^1.6.2",
     "i18next": "^25.6.3",
+    "leaflet": "^1.9.4",
+    "query-string": "^7.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.66.1",
     "react-i18next": "^16.3.5",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router": "^7.0.2",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.0",
