--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router": "^7.0.2",
+    "react-router-dom": "^7.10.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
