--- a/.github/workflows/refine-build-branch.yml
+++ b/.github/workflows/refine-build-branch.yml
@@ -1,10 +1,14 @@
-name: Build Refine App & Publish Branch
+name: Build Refine App & Publish Branch + Docker Image
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
+
+permissions:
+  contents: write
+  packages: write
 
 jobs:
   build:
@@ -28,6 +32,9 @@ jobs:
       - name: Build with Refine
         run: npx refine build
 
+      # -----------------------
+      # Publish build branch
+      # -----------------------
       - name: Publish dist to build branch
         run: |
           set -e
@@ -38,19 +45,32 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
 
-          # Create orphan build branch
           git checkout --orphan "$TARGET_BRANCH"
-
-          # Remove everything
           git rm -rf .
-
-          # Copy build output
           cp -r "$BUILD_DIR"/* .
-
-          # Required for GitHub Pages
           touch .nojekyll
-
-          # Commit and force push
           git add .
           git commit -m "Refine build from $GITHUB_SHA"
           git push origin "$TARGET_BRANCH" --force
+
+      # -----------------------
+      # Build Docker Image
+      # -----------------------
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_TOKEN }}
+
+      - name: Build & Push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/${{ github.repository }}:${{ github.sha }}
