--- a/.github/workflows/refine-build-branch.yml
+++ b/.github/workflows/refine-build-branch.yml
@@ -1,63 +1,61 @@
-name: Build Refine App & Publish Branch + Docker Image
+name: Frontend Build, Docker & Pages
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
   pull_request:
-    branches: ["main"]
+    branches: [ "main" ]
 
 permissions:
   contents: write
   packages: write
 
 jobs:
+
+# -----------------------
+# 1) Build frontend
+# -----------------------
   build:
     runs-on: ubuntu-latest
+    outputs:
+      dist-path: dist
 
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: "npm"
+          cache: npm
 
-      - name: Install dependencies
-        run: npm ci
+      - run: npm ci
+      - run: npx refine build
 
-      - name: Build with Refine
-        run: npx refine build
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist
 
-      # -----------------------
-      # Publish build branch
-      # -----------------------
-      - name: Publish dist to build branch
-        run: |
-          set -e
 
-          TARGET_BRANCH="build"
-          BUILD_DIR="dist"
+# -----------------------
+# 2) Build Docker image
+# -----------------------
+  docker:
+    needs: build
+    runs-on: ubuntu-latest
 
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
+    steps:
+      - uses: actions/checkout@v4
 
-          git checkout --orphan "$TARGET_BRANCH"
-          git rm -rf .
-          git checkout --orphan build
-          cp -r "$BUILD_DIR"/* .
-          touch .nojekyll
-          git add .
-          git commit -m "Refine build from $GITHUB_SHA"
-          git push origin "$TARGET_BRANCH" --force
+      - name: Download dist artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist
 
-      # -----------------------
-      # Build Docker Image
-      # -----------------------
-      - name: Set up Docker Buildx
+      - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Login to GHCR
@@ -67,7 +65,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build & Push Docker image
+      - name: Build & push image
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -75,3 +73,36 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository }}:latest
             ghcr.io/${{ github.repository }}:${{ github.sha }}
+
+
+# -----------------------
+# 3) Publish to build branch
+# -----------------------
+  pages:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Download dist artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist
+
+      - name: Publish dist to build branch
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+
+          git checkout --orphan build
+          git rm -rf .
+          cp -r dist/* .
+          touch .nojekyll
+
+          git add .
+          git commit -m "Build $GITHUB_SHA"
+          git push origin build --force
