--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@chakra-ui/form-control": "^2.2.0",
     "@chakra-ui/react": "^3.30.0",
     "@emotion/react": "^11.14.0",
     "@hookform/resolvers": "^5.2.2",
+    "@react-input/mask": "^2.0.4",
     "@refinedev/cli": "^2.16.48",
     "@refinedev/core": "^5.0.0",
     "@refinedev/devtools": "^2.0.1",
@@ -27,6 +29,7 @@
     "react-leaflet": "^5.0.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.10.0",
+    "use-mask-input": "^3.5.2",
     "zod": "^4.1.13"
   },
   "devDependencies": {
